<resources>
    <string name="app_name" translatable="false">Android-Stable-diffusion-ONNX</string>
    <string-array name="Resolution">
        <item>192</item>
        <item>256</item>
        <item>320</item>
        <item>384</item>
        <item>448</item>
        <item>512</item>
    </string-array>
    <string-array name="Scheduler">
        <item>EulerA</item>
        <item>DPMS</item>
    </string-array>
    <string name="FragmentMain_CopyModel">复制Assets到模型路径</string>
    <string name="FragmentMain_Settings">设置</string>
    <string name="FragmentMain_Generate">生成</string>
    <string name="FragmentMain_Save">保存</string>
    <string name="FragmentMain_Save_Success">保存成功</string>
    <string name="FragmentMain_Save_Failed">保存失败</string>
    <string name="FragmentMain_Status_Initializing">初始化. . .</string>
    <string name="FragmentMain_Status_Done">已完成</string>
    <string name="FragmentSetting_ClearModels">清除模型</string>
    <string name="FragmentSetting_SelectUnetModel">选择Unet模型</string>
    <string name="FragmentSetting_SelectTextEncoderModel">选择Text encoder模型</string>
    <string name="FragmentSetting_SelectVaeDecorderModel">选择Vae decoder模型</string>
    <string name="FragmentSetting_SelectMergesFile">选择Merges文件</string>
    <string name="FragmentSetting_SelectVocabFile">选择Vocab文件</string>
    <string name="FragmentMain_Status_Decoding">Decoding</string>
    <string name="FragmentMain_CopyModel_Working">Copying models...</string>
    <string name="FragmentMain_Status_InitTokenizer">Initializing tokenizer</string>
    <string name="FragmentMain_Status_TokenizingPrompts">Tokenizing prompts</string>
    <string name="FragmentMain_Status_InitUNet">Initializing UNet</string>
    <string name="FragmentMain_Status_StartingInference">Starting inference</string>
    <string name="FragmentMain_Status_Error">Error</string>
    <string name="FragmentMain_UseLastSeed">Use Last Seed</string>
</resources>